Trying to fix alignment on index

--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -32,7 +32,7 @@
 	  margin: 2em auto;
 
 	  .song-summary{
-	  	width: 65%;
+	  	max-width: 65%;
 	  	display: inline-block;
 	  	vertical-align: middle;
 	  	p{
